[tool.poetry]
name = "streamlitt-csv-agent"
version = "0.1.0"
description = "ask quetions about your csv"
authors = ["efrat miyara <efrat@tensor-tech.co.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.0"
langchain = "^0.0.327"
langchain-experimental = "^0.0.37"
openai = "^0.28.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
